--- a/templates/hackathons.html
+++ b/templates/hackathons.html
@@ -11,11 +11,13 @@
     </div>
     <div>
       <ul>
-        <li><a>MLH Hackathons</a></li>
-        <li><a>DevFolio Hackathons</a></li>
+        <li><a href="{{url_for('mlh_hac_all')}}">MLH Hackathons</a></li>
+        <li><a href="{{url_for('devfolio_all')}}">DevFolio Hackathons</a></li>
         <li><a>EventBrite Hackathons</a></li>
-        <li><a>Open Source Hackathons </a></li>
-        <li><a>Competitive-Coding </a></li>
+        <li>
+          <a href="{{url_for('open_source_all')}}">Open Source Hackathons </a>
+        </li>
+        <li><a href="{{url_for('comp_coding')}}">Competitive-Coding </a></li>
       </ul>
     </div>
   </body>
