--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -17,7 +17,7 @@
         <li><a>AWS Events</a></li>
         <li><a>Microsoft Events</a></li>
         <li><a>iOS events</a></li>
-        <li><a>Student Developer Support</a></li>
+        <li><a href="{{url_for('student_dev_support')}}">Student Developer Support</a></li>
       </ul>
     </div>
   </body>
