--- a/templates/ios.html
+++ b/templates/ios.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="{{ url_for('static', path='/gdg.css') }}" rel="stylesheet" />
-    <title>AWS Events</title>
+    <title>iOS Events</title>
   </head>
   <body>
     <table class="styled-table">
