--- a/templates/hackathons.html
+++ b/templates/hackathons.html
@@ -11,8 +11,8 @@
     </div>
     <div>
       <ul>
-        <li><a href="{{url_for('mlh_hac_all')}}">MLH Hackathons</a></li>
-        <li><a href="{{url_for('devfolio_all')}}">DevFolio Hackathons</a></li>
+        <li><a href="{{url_for('mlh_hac')}}">MLH Hackathons</a></li>
+        <li><a href="{{url_for('devfolio_hac')}}">DevFolio Hackathons</a></li>
         <li><a>EventBrite Hackathons</a></li>
         <li>
           <a href="{{url_for('open_source_all')}}">Open Source Hackathons </a>
