--- a/templates/devfolio.html
+++ b/templates/devfolio.html
@@ -7,7 +7,7 @@
     <link href="{{ url_for('static', path='/gdg.css') }}" rel="stylesheet" />
     <title>DevFolio Hackathons</title>
   </head>
-  <body>
+  <body style="background-image: url('../static/tech-bacg.webp')">
     <table class="styled-table">
       <thead>
         <th>Names</th>
