--- a/static/styles.css
+++ b/static/styles.css
@@ -75,7 +75,7 @@ ul {
   border-radius: 20%;
 }
 .text {
-  color: rgb(43, 41, 41);
+  color: white;
   padding-top: 5rem;
   font-size: 1.5rem;
   padding-right: 2rem;
